# FIUBA-TDP1-Frame-Of-Reference

./: Binary.cpp  Binary.h  Block.cpp  Block.h  BlockProtected.cpp  BlockProtected.h  CMakeLists.txt  Controller.cpp  Controller.h  File.cpp  File.h  FileProtected.cpp  FileProtected.h  FrameOfReference  Nodo.h  NormalQueue.h  ProcessorThread.cpp  ProcessorThread.h  README.md  SafeQueue.h  Thread.h  ThreadManager.cpp  ThreadManager.h  Vector.cpp  Vector.h  WriterThread.cpp  WriterThread.h  main.cpp  valgrind.out
